2016-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (start_a_flush_taper): Use
	  TAPER_STATE_TAPE_STARTED or TAPER_STATE_RESERVATION

2016-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning

2016-06-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (start_some_dumps): Do not wait for chunker PORT
	  or SHM-NAME
	* server-src/driver.c (handle_chunker_result): Handle PORT and
	  SHM-NAME reply

2016-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/find.c (make_dump_hash, dump_hash_exist): Fix for
	  host_hash

2016-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amsamba.pl: Fix for newer samba version

2016-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: typo

2016-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (label_to_slot): Fix for $r and $t
	  substitution
	* perl/Amanda/Changer/disk.pm: Do not create all num-slot directories,
	  inventory return only the slot with a directory + runtapes new slots
	* perl/Amanda/Changer/diskflat.pm: inventory return only the slot with
	  a label + runtapes new slots
	* installcheck/Amanda_Rest_Storages.pl: Set auto-create-slot

2016-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amflock.c (common-src/amflock.c): Create the parent
	  directory

2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Allow $t in changerfile and tpchanger from a
	  changer section
	* man/xml-source/amanda.conf.5.xml: Document it

2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm: Allow $r and $t in autolabel and
	  meta-autolabel
	* man/xml-source/amanda.conf.5.xml: Document it

2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Allow $o, $c, $r and $t in tapepool